[FIX] Contrast problem.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/users/chibaguy@22039 b456876b-0849-0410-b77d-98878d47e9d5

--- a/trunk_themes/themes/twist/styles/twist.css
+++ b/trunk_themes/themes/twist/styles/twist.css
@@ -256,6 +256,7 @@ div#tiki-top {
 
 #topbar_custom_code {
 	background: #fff;
+	color: #000;
 	border-right: 1px solid #354d65;
 }
 
